--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
   <title>Movie Maker</title>
 </head>
 <body>
+  <div class="container-fluid">
+    <div class="row border-bottom">
+      <div class="col-sm-6">
+        <h1 class="margin-top">Movie Maker</h1>
+      </div>
+      <div class="col-sm-4 col-sm-offset-2 text-right">
+        <input type="text" class="form-control margin-top" id="budget-input" placeholder="Enter Budget">
+        <button type="submit" class="btn btn-default" id="set-budget-btn">Set Budget</button>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-sm-6 col-sm-offset-3">
+        <h2>Enter a budget</h2>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+                60%
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="category-element-holder">
+      <div id="category-holder"></div>
+    </div>
+</div>
+
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="./dist/app.js"></script>
