--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="col-sm-6 col-sm-offset-3">
         <h2>Enter a budget</h2>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;" id="progress-bar">
                 60%
           </div>
         </div>
